--- a/bmi-cal.html
+++ b/bmi-cal.html
@@ -13,13 +13,17 @@
     let weight = prompt('Enter your weight: ', '');
     height = +height;
     weight = +weight;
-    let bmi = weight / ( height ^ 2 );
-    if (bmi < 18)
+    let bmi = weight / ( height ** 2 );
+    if (bmi < 18){
         document.write("Underweight");
-    else if (bmi < 25.0)
+    }
+    else if (bmi < 25.0){
         document.write("Normal");
-    else if (bmi < 30.0)
+    }
+    else if (bmi < 30.0){
         document.write("Overweight");
-    else
+    }
+    else {
         document.write("Obese");
+    }
 </script>
